--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@thaerious/parseargs",
-  "version": "1.1.0",
-  "description": "Easily parse command line arguments.",
+  "version": "1.2.0",
+  "description": "Easily parse command line arguments in NodeJS.",
   "main": "src/ParseArgs.js",
   "scripts": {
     "test": "npx mocha ./test"
